--- a/Tareas/TAREA_02.ipynb
+++ b/Tareas/TAREA_02.ipynb
@@ -16,20 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "variable =-101\n",
-        "while (variable<200):\n",
-        "  variable=variable+1\n",
-        "  print (variable)\n"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uReeB4XT-ek8",
-        "outputId": "ff3ec1e2-a4d4-411f-e181-1375319d2a01"
+        "id": "8-ZHLdK9GDew",
+        "outputId": "63dac209-6b53-438b-89d4-62fc44de01f7"
       },
-      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,24 +332,35 @@
             "200\n"
           ]
         }
+      ],
+      "source": [
+        "#Problema 1\n",
+        "numero = -100\n",
+        "\n",
+        "while numero <= 200:\n",
+        "    print(numero)\n",
+        "    numero += 1"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "x= range(-101,201)\n",
-        "for n in x:\n",
-        "  if n%6==0:\n",
-        "    print (n)"
+        "# Problema 2\n",
+        "numero = -100\n",
+        "\n",
+        "while numero <= 200:\n",
+        "    if numero % 6 == 0:\n",
+        "        print(numero)\n",
+        "    numero += 1"
       ],
       "metadata": {
-        "id": "VOEQOTOw_sN3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20decc72-2aac-4a8e-eb8e-b8e128071477"
+        "id": "Zy0op339I1EA",
+        "outputId": "e526ebca-5ae4-4f58-e596-b7c79e7ea09d"
       },
-      "execution_count": 43,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +424,9 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "suma=(200+33)\n",
+        "#Problema 3\n",
+        "\n",
+        "suma=(250+535)\n",
         "\n",
         "if (suma<200):\n",
         "  resultado=\"Menor a 200\"\n",
@@ -430,19 +437,16 @@
         "   resultado=\"mayor a 250\"\n",
         "print (resultado)\n",
         "\n",
-        "\n",
-        "#Realiza el algoritmo para un sumador de dos números. Si el resultado es menor a 200 se mostrará el mensaje \"menor a 200\",\n",
-        "#si el resultado es mayor a 200, pero menor a 250 mostrará el mensaje \"mayor a 200\", pero si es mayor a 250 mostrará el mensaje \"mayor a 250\".\n",
         "\n"
       ],
       "metadata": {
-        "id": "NVSY8MOoQMxq",
-        "outputId": "5e803ea1-428c-4ce7-de49-12161560e305",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U3zrQjK5JW_5",
+        "outputId": "74d2d344-dab8-4918-d33f-9c6c69c64eb0"
       },
-      "execution_count": 127,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,17 +460,20 @@
     {
       "cell_type": "code",
       "source": [
-        "#Generar un programa que combine variables, tipos de datos y una condicional en Python (hacer una función que evalúe si el usuario es mayor de edad y si\n",
-        "#le gusta la música urbana, que envíe diferentes textos según la respuesta del usuario)\n",
-        "edad= int(input(\"¿Que edad tienes?\"))\n",
-        "resultado=edad\n",
-        "Le_gusta= str(input(\"¿Te gusta la música urbana?\"))\n",
+        "#Problema 4\n",
         "\n",
-        "if (edad>=19):\n",
+        "# Preguntar edad\n",
+        "años= int(input(\"¿Cuantos años tienes?\"))\n",
+        "resultado=años\n",
+        "\n",
+        "# Preguntar por gusto musical\n",
+        "gusto_musica_urbana = str(input(\"¿Te gusta la música urbana?\"))\n",
+        "\n",
+        "if (años>=19):\n",
         "  print (\"Eres mayor de edad\")\n",
         "else:\n",
-        "  print (\"eres menor de edad\")\n",
-        "if (Le_gusta==\"Si\"):\n",
+        "  print (\"Eres menor de edad\")\n",
+        "if (gusto_musica_urbana==\"Si\"):\n",
         "  print (\"Te gusta la música urbana\")\n",
         "else:\n",
         "  print(\"No te gusta la música urbana\")"
@@ -475,31 +482,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Oj13wJs-vy9c",
-        "outputId": "9c365e65-bde9-4f80-8982-46e4f879a594"
+        "id": "NU9KWoUkMr7B",
+        "outputId": "5434c059-15ee-4959-dbef-cd45f1f4b880"
       },
-      "execution_count": 23,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "¿Que edad tienes?40\n",
-            "¿Te gusta la música urbana?No\n",
+            "¿Cuantos años tienes?30\n",
+            "¿Te gusta la música urbana?no\n",
             "Eres mayor de edad\n",
             "No te gusta la música urbana\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "sNbogKSy7Kb_"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
